# ai3d-backend

./: README.md  docker-compose.yaml  pyproject.toml  start_app.sh  start_app_production.sh
.github/workflows/: github-actions.yml
ai3d/: __init__.py  admins.py  auth.py  commands.py  config.py  crud.py  database.py  endpoints.py  main.py  models.py  modules.py  schemas.py  utils.py
alembic/: env.py
alembic/versions/: 278a3ec785cb_add_user_role.py  f86fed18df35_add_user_model.py
nginx/: nginx.conf
tests/: client.py  conftest.py  test_commands.py  test_crud.py  test_endpoints.py
