[tool.poetry]
name = "ai3d"
version = "0.1.0"
description = ""
authors = ["Benyamin <benyaminjmf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"
uvicorn = "^0.24.0.post1"
alembic = "^1.12.1"
sqlalchemy = "1.4.27"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.1.0"
pytz = "^2023.3.post1"
asyncpg = "^0.29.0"
gunicorn = "^21.2.0"
fastapi = "^0.108.0"
openai = "^1.6.1"
g4f = "^0.1.9.6"
google-generativeai = "^0.3.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
asyncclick = "^8.1.3.4"
sqladmin = {git = "https://github.com/agn-7/sqladmin.git"}

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
pytest = "7.4.2"
black = "^23.10.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
